templates/eoloplanner-mca_template.yaml
---
# Source: eoloplanner-mca/templates/global-np.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-default-deny
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
# Source: eoloplanner-mca/templates/global-np.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-dns-egress
spec:
  podSelector:
    matchLabels:
      release-name-dns-policy: enabled
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
---
# Source: eoloplanner-mca/templates/mongodb.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-mongodb-from-topo
spec:
  podSelector:
    matchLabels:
      app: release-name-mongodb
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: release-name-toposervice
    ports:
    - port: 27017
      protocol: TCP
---
# Source: eoloplanner-mca/templates/mysql.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-mysql-from-server
spec:
  podSelector:
    matchLabels:
      app: release-name-mysql
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: release-name-server
    ports:
    - port: 3306
      protocol: TCP
---
# Source: eoloplanner-mca/templates/planner.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-planner-to-rabbit-weather-topo
spec:
  podSelector:
    matchLabels:
      app: release-name-planner
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: release-name-rabbitmq
    ports:
    - port: 5672
      protocol: TCP
  - to:
    - podSelector:
        matchLabels:
          app: release-name-weatherservice
    ports:
    - port: 9090
      protocol: TCP
  - to:
    - podSelector:
        matchLabels:
          app: release-name-toposervice
    ports:
    - port: 8080
      protocol: TCP
---
# Source: eoloplanner-mca/templates/rabbitmq.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-rabbitmq-from-planner-server
spec:
  podSelector:
    matchLabels:
      app: release-name-rabbitmq
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: release-name-planner
    - podSelector:
        matchLabels:
          app: release-name-server
    ports:
    - port: 5672
      protocol: TCP
---
# Source: eoloplanner-mca/templates/server.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-server-to-mysql-rabbit
spec:
  podSelector:
    matchLabels:
      app: release-name-server
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: release-name-mysql
    ports:
    - port: 3306
      protocol: TCP
  - to:
    - podSelector:
        matchLabels:
          app: release-name-rabbitmq
    ports:
    - port: 5672
      protocol: TCP
---
# Source: eoloplanner-mca/templates/server.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-server-from-nodeport
spec:
  podSelector:
    matchLabels:
      app: release-name-server
  ingress:
    - ports:
      - port: 3000
---
# Source: eoloplanner-mca/templates/toposervice.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-topo-to-mongodb
spec:
  podSelector:
    matchLabels:
      app: release-name-toposervice
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: release-name-mongodb
    ports:
    - port: 27017
      protocol: TCP
---
# Source: eoloplanner-mca/templates/toposervice.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-topo-from-nodeport
spec:
  podSelector:
    matchLabels:
      app: release-name-toposervice
  ingress:
    - ports:
      - port: 8080
---
# Source: eoloplanner-mca/templates/weatherservice.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-weather-from-planner
spec:
  podSelector:
    matchLabels:
      app: release-name-weatherservice
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: release-name-planner
    ports:
    - port: 9090
      protocol: TCP
---
# Source: eoloplanner-mca/templates/mongodb.yml
apiVersion: v1
kind: Service
metadata:
  name: release-name-mongodb-service
  labels:
    app: release-name-mongodb
spec:
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
    name: mongodb-port-27017
  - port: 27018
    targetPort: 27018
    protocol: TCP
    name: mongodb-port-27018
  - port: 27019
    targetPort: 27019
    protocol: TCP
    name: mongodb-port-27019
  selector:
    app: release-name-mongodb
  type: ClusterIP
---
# Source: eoloplanner-mca/templates/mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: release-name-mysql-service
  labels:
    app: release-name-mysql
spec:
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
    name: mysql-port
  selector:
    app: release-name-mysql
  type: ClusterIP
---
# Source: eoloplanner-mca/templates/rabbitmq.yml
apiVersion: v1
kind: Service
metadata:
  name: release-name-rabbitmq-service
  labels:
    app: release-name-rabbitmq
spec:
  ports:
  - port: 5672
    targetPort: 5672
    protocol: TCP
    name: rabbitmq-port-5672
  - port: 15672
    targetPort: 15672
    protocol: TCP
    name: rabbitmq-port-15672
  selector:
    app: release-name-rabbitmq
  type: ClusterIP
---
# Source: eoloplanner-mca/templates/server.yml
apiVersion: v1
kind: Service
metadata:
  name: release-name-server-service
  labels:
    app: release-name-server
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: server-port
  selector:
    app: release-name-server
  type: NodePort
---
# Source: eoloplanner-mca/templates/toposervice.yml
apiVersion: v1
kind: Service
metadata:
  name: release-name-toposervice-service
  labels:
    app: release-name-toposervice
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: toposervice-port
  selector:
    app: release-name-toposervice
  type: NodePort
---
# Source: eoloplanner-mca/templates/weatherservice.yml
apiVersion: v1
kind: Service
metadata:
  name: release-name-weatherservice-service
  labels:
    app: release-name-weatherservice
spec:
  ports:
  - port: 9090
    targetPort: 9090
    protocol: TCP
    name: weatherservice-port
  selector:
    app: release-name-weatherservice
  type: ClusterIP
---
# Source: eoloplanner-mca/templates/mongodb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-mongodb-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: release-name-mongodb
  replicas: 1
  template:
    metadata:
      labels:
        app: release-name-mongodb
    spec:
      containers:
      - name: release-name-mongodb
        image: mongo:4.2.12-bionic
        ports:
        - containerPort: 27017
        - containerPort: 27018
        - containerPort: 27019
        volumeMounts:
        - mountPath: /data/db
          name: release-name-datadb
      volumes:
      - name: release-name-datadb
        persistentVolumeClaim:
          claimName: release-name-mongo-pvc
---
# Source: eoloplanner-mca/templates/mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-mysql-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: release-name-mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: release-name-mysql
    spec:
      containers:
      - name: release-name-mysql
        image: mysql:8.0.22
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: release-name-datadb
      volumes:
      - name: release-name-datadb
        persistentVolumeClaim:
          claimName: release-name-mysql-pvc
---
# Source: eoloplanner-mca/templates/planner.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-planner-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: release-name-planner
  replicas: 1
  template:
    metadata:
      labels:
        app: release-name-planner
        release-name-dns-policy: enabled
    spec:
      securityContext:
        runAsUser: 1001
      restartPolicy: Always
      containers:
      - name: release-name-planner
        image: franrobles8/planner:v3.0
---
# Source: eoloplanner-mca/templates/rabbitmq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-rabbitmq-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: release-name-rabbitmq
  replicas: 1
  template:
    metadata:
      labels:
        app: release-name-rabbitmq
    spec:
      containers:
      - name: release-name-rabbitmq
        image: rabbitmq:3-management
        ports:
        - containerPort: 5672
        - containerPort: 15672
        volumeMounts:
        - mountPath: /var/lib/rabbitmq/mnesia
          name: release-name-datarabbit
      volumes:
      - name: release-name-datarabbit
        persistentVolumeClaim:
          claimName: release-name-rabbit-pvc
---
# Source: eoloplanner-mca/templates/server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-server-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: release-name-server
  replicas: 1
  template:
    metadata:
      labels:
        app: release-name-server
        release-name-dns-policy: enabled
    spec:
      securityContext:
        runAsUser: 1001
      restartPolicy: Always
      containers:
      - name: release-name-server
        image: oscarsotosanchez/server:v1.0
        command: ["bash"]
        args:
        - "-c"
        - "./wait-for-it.sh release-name-mysql-service:3306 -t 500 -- ./wait-for-it.sh release-name-rabbitmq-service:5672 -t 500 -- node src/server.js"
        ports:
        - containerPort: 3000
---
# Source: eoloplanner-mca/templates/toposervice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-toposervice-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: release-name-toposervice
  replicas: 1
  template:
    metadata:
      labels:
        app: release-name-toposervice
        release-name-dns-policy: enabled
    spec:
      securityContext:
        runAsUser: 1001
      restartPolicy: Always
      containers:
      - name: release-name-toposervice
        image: oscarsotosanchez/toposervice:v1.0
        ports:
        - containerPort: 8080
---
# Source: eoloplanner-mca/templates/weatherservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-weatherservice-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: release-name-weatherservice
  replicas: 1
  template:
    metadata:
      labels:
        app: release-name-weatherservice
    spec:
      securityContext:
        runAsUser: 1001
      restartPolicy: Always
      containers:
      - name: release-name-weatherservice
        image: oscarsotosanchez/weatherservice:v1.0
        ports:
        - containerPort: 9090
